# Suderra-OS

./: .editorconfig  .gitignore  .gitmodules  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Config.in  GOVERNANCE.md  LICENSE  MAINTAINERS.md  Makefile  README.md  REUSE.toml  ROADMAP.md  SECURITY.md  external.desc  external.mk
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_issue.md
.github/workflows/: arm-production-build.yml  build.yml  codeql.yml  governance-drift.yml  hadolint.yml  image-build.yml  lint.yml  production-runtime-qemu.yml  release-evidence-ingress.yml  release-preflight.yml  release.yml  runtime-mutations.yml  rust.yml  scorecard.yml  secureboot-enroll.yml  security-scan.yml  slsa-provenance.yml  stale.yml
.well-known/: security.txt
LICENSES/: Apache-2.0.txt  CC0-1.0.txt  GPL-2.0-or-later.txt
board/keys/: .gitignore  README.md
ci/: Dockerfile  build-matrix.yml  build-performance-budget.yml  build-warning-policy.json  docker-compose.yml  evidence-contract.yml  github-governance-policy.yml
configs/: suderra_aarch64_defconfig  suderra_aarch64_revpi4_defconfig  suderra_aarch64_revpi4_prod_ab_defconfig  suderra_aarch64_rpi4_defconfig  suderra_aarch64_rpi4_prod_ab_defconfig  suderra_aarch64_rpi4_usb_installer_defconfig  suderra_qemu_x86_64_defconfig  suderra_qemu_x86_64_prod_ab_defconfig  suderra_x86_64_defconfig
docs/: README.md
docs/architecture/: ADR-0001-buildroot-vs-yocto.md  ADR-0002-systemd-minimal.md  ADR-0003-multi-arch-strategy.md  ADR-0004-rauc-ab-partition.md  ADR-0005-dm-verity-secure-boot.md  ADR-0006-iec-62443-sl2-vs-sl3.md  ADR-0007-arm-verity-ab-boot-chain.md  ADR-0008-device-trust-architecture.md  ADR-0009-tpm-implementation.md  ADR-template.md  ARCHITECTURE.md  boot-chain.md
docs/assessments/: 2026-05-12-suderra-os-readiness.md  2026-05-13-production-readiness-gates.md  2026-05-19-release-operations-plan-review.md  2026-05-20-buildroot-2025-05-native-rust-migration-plan.md  2026-05-20-enterprise-grade-gap-closure-plan.md  2026-05-21-enterprise-evidence-closure-plan.md  2026-05-22-payload-build-performance-plan.md  2026-05-24-enterprise-rc-readiness-plan.md  INDEX.md
docs/compliance/: cis-dil-mapping.md  cra-annex-i-checklist.md  cra-readiness.md  eu-doc-template.md  iec-62443-4-2-component-requirements.md  iec-62443-mapping.md  licenses.md  openssf-badge-status.md  support-period.md
docs/dev/: branch-protection.md  coding-standards.md  docker-build.md  qemu-test.md  release-core-host-tools.md  rust-workspace.md  setup.md
docs/hardware/: rpi4-cm4.md
docs/operations/: build.md  ci-log-and-warning-triage.md  debug.md  edge-agent-update.md  evidence-retention.md  factory-reset.md  flash.md  image-build-ci.md  install.md  lab-station-registry.industrial-x86_64.example.json  operator-lifecycle.md  ota.md  rc-evidence-dry-run.md  release-evidence.md  release-lifecycle.md  release-preflight.md  runbook.md  usb-installer-alpha-validation.md  verify-release.md  x86-hardware-lab.md
docs/security/: cvd-policy.md  cve-process.md  field-appliance-hardening.md  incident-response.md  kernel-hardening.md  key-ceremony.md  key-management.md  pen-test-checklist.md  pen-test-report-template.md  sbom-process.md  security-architecture.md  security-gaps-and-risks.md  system-audit-2026-07.md  threat-model.md  vex-policy.md
host-tools/: Cargo.toml  deny.toml  rust-toolchain.toml
host-tools/release-core/: Cargo.toml
host-tools/release-core/src/: main.rs
host-tools/schema-compat/: Cargo.toml
host-tools/schema-compat/src/: lib.rs
package/suderra-attestation/: Config.in  suderra-attestation.mk
package/suderra-edge-agent/: Config.in  config.yaml  suderra-agent.service  suderra-edge-agent.hash  suderra-edge-agent.mk
package/suderra-firstboot/: Config.in  suderra-firstboot.mk  suderra-firstboot.service
package/suderra-keys/: Config.in  suderra-keys.mk
package/suderra-os-installer/: Config.in  suderra-os-install  suderra-os-install.service  suderra-os-installer.mk
package/suderra-ota/: Config.in  suderra-ota-floor.service  suderra-ota-mark-good.service  suderra-ota.mk
package/suderra-rauc-config/: Config.in  boot.mount  boot.mount.arm  fw_env.config  suderra-rauc-arm-slot-hook.sh  suderra-rauc-boot-state  suderra-rauc-config.mk  suderra-rauc-health-gate  suderra-rauc-mark-good  suderra-rauc-mark-good.service  system.conf  system.conf.arm
scripts/: apply-buildroot-patches.sh  build-in-docker.sh  build.sh  buildroot-source.sh  create-os-update-manifest.py  create-rauc-bundle.sh  flash-sd.sh  gen-dev-keys.sh  gen-sbom.sh  install.sh  lint.sh  new-adr.sh  production-artifacts.sh  qemu-run.sh  rauc-x86-slot-hook.sh  run-tests.sh  sign-bundle.sh  suderra-lab  verify-reproducible.sh
userspace/: Cargo.toml  README.md  deny.toml  rust-toolchain.toml
userspace/.cargo/: config.toml
userspace/suderra-attestation/: Cargo.toml  README.md
userspace/suderra-attestation/src/: main.rs
userspace/suderra-config/: Cargo.toml  README.md
userspace/suderra-config/src/: canonical.rs  lib.rs  tpm.rs  variant.rs
userspace/suderra-factory-reset/: Cargo.toml  README.md
userspace/suderra-factory-reset/src/: main.rs
userspace/suderra-firstboot/: Cargo.toml  README.md
userspace/suderra-firstboot/src/: main.rs
userspace/suderra-installer/: Cargo.toml  README.md
userspace/suderra-installer/src/: audit.rs  cli.rs  contracts.rs  download.rs  main.rs  manifest.rs  sources.rs  variant.rs  verify.rs
userspace/suderra-installer/src/cmd/: install.rs  list.rs  mod.rs  remove.rs  rollback.rs  status.rs  upgrade.rs
userspace/suderra-ota/: Cargo.toml  README.md
userspace/suderra-ota/src/: main.rs
userspace/suderra-telemetry/: Cargo.toml  README.md
userspace/suderra-telemetry/src/: main.rs
userspace/suderra-watchdog/: Cargo.toml  README.md
userspace/suderra-watchdog/src/: main.rs
vex/: README.md  suderra-os-sample.openvex.json
(+190 files in other folders)
