# SPDX-FileCopyrightText: 2026 Suderra OS contributors
# SPDX-License-Identifier: Apache-2.0

[workspace]
resolver = "2"
members = [
    "schema-compat",
    "release-core",
]

[workspace.package]
version = "0.1.0-alpha"
edition = "2021"
rust-version = "1.86"
authors = ["Suderra OS Contributors"]
license = "Apache-2.0"
repository = "https://github.com/Okan-wqm/Suderra-OS"
publish = false

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
