[package]
name = "suderra-attestation"
description = "TPM 2.0 PCR remote attestation — cihaz boot state'inin kriptografik kanıtı"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[[bin]]
name = "suderra-attestation"
path = "src/main.rs"

[dependencies]
suderra-config = { workspace = true }

tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
