# SPDX-FileCopyrightText: 2026 Suderra OS contributors
# SPDX-License-Identifier: Apache-2.0

[package]
name = "suderra-attestation"
description = "TPM 2.0 PCR remote attestation — cihaz boot state'inin kriptografik kanıtı"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
publish = false

[[bin]]
name = "suderra-attestation"
path = "src/main.rs"

[dependencies]
suderra-config = { workspace = true }

tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }

[lints]
workspace = true
