# SPDX-FileCopyrightText: 2026 Suderra OS contributors
# SPDX-License-Identifier: Apache-2.0

[package]
name = "suderra-config"
description = "Ortak konfigürasyon parse ve validasyon (Suderra OS userspace lib crate)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
publish = false

[lib]
name = "suderra_config"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.14"

[lints]
workspace = true
