[package]
name = "suderra-factory-reset"
description = "GPIO veya cloud-triggered factory reset handler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[[bin]]
name = "suderra-factory-reset"
path = "src/main.rs"

[dependencies]
suderra-config = { workspace = true }

anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }
sd-notify = { workspace = true }
