# SPDX-FileCopyrightText: 2026 Suderra OS contributors
# SPDX-License-Identifier: Apache-2.0

[package]
name = "suderra-installer"
description = "Suderra OS package installer — Edge Agent + plugin download/verify/install (Ubuntu apt-like UX)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
publish = false

[[bin]]
name = "suderra-installer"
path = "src/main.rs"

[dependencies]
suderra-config = { workspace = true }

# Async runtime + HTTP
tokio = { workspace = true, features = ["fs", "io-util"] }
reqwest = { workspace = true }

# Error handling + logging
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
base64 = { workspace = true }

# Crypto (SHA256 verify)
sha2 = { workspace = true }
hex = { workspace = true }
ed25519-dalek = { workspace = true }

# CLI + UX
clap = { workspace = true }
dialoguer = { workspace = true }

# Time (audit log timestamps)
chrono = { workspace = true }

# Filesystem
tempfile = { workspace = true }
nix = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
