# SPDX-FileCopyrightText: 2026 Suderra OS contributors
# SPDX-License-Identifier: Apache-2.0

[package]
name = "suderra-ota"
description = "Suderra OS OTA orchestrator: RAUC bundle download, verify, install, rollback"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
publish = false

[[bin]]
name = "suderra-ota"
path = "src/main.rs"

[dependencies]
suderra-config = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
sd-notify = { workspace = true }
nix = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }

[lints]
workspace = true
