# SPDX-FileCopyrightText: 2026 Suderra OS contributors
# SPDX-License-Identifier: Apache-2.0

[package]
name = "suderra-telemetry"
description = "Cihaz sağlık metrikleri + uygulama metriklerini cloud'a push eder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
publish = false

[[bin]]
name = "suderra-telemetry"
path = "src/main.rs"

[dependencies]
suderra-config = { workspace = true }

tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sd-notify = { workspace = true }
nix = { workspace = true }
